--- a/css/style.css
+++ b/css/style.css
@@ -50,6 +50,7 @@
     padding-right: 0.25in;
 
     hyphens: auto;
+    line-height: 1.75;
 }
 
 html .emu-title-page {
