--- a/css/toc.css
+++ b/css/toc.css
@@ -1,3 +1,7 @@
+div#emu-toc {
+    line-height: normal;
+}
+
 div.emu-toc-row {
     display: flex;
     align-items: center;
